--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,13 @@ langserve
 fastapi
 uvicorn
 sse_starlette
+bs4
+pypdf
+chromadb
+faiss-cpu
+sentence-transformers
+lancedb
+arxiv
+wikipedia
+langchain-groq
+groq
